--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar">
         <a href="#"><img src="img/BASALTbasalt.svg" alt="" /></a>
-        <a href="login.html"><img src="img/SIGNIN.png" /></a>
+        <a href="signIn.html"><img src="img/SIGNIN.png" /></a>
       </nav>
     </header>
 
