--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
     </header>
 
     <main>
-      <div class="loginForm">
+      <form class="loginForm">
         <img src="img/basaltwhite.svg" alt="" />
         <p class="text-white">Register new account</p>
         <div class="form-inputs">
           <label for="email" class="form-label text-white">Email</label>
-          <input type="text" placeholder="Email" class="form-control" />
+          <input type="text" id="email" placeholder="Email" class="form-control" />
         </div>
         <div class="form-inputs">
           <label for="username" class="form-label text-white">Username</label>
-          <input type="text" placeholder="Username" class="form-control" />
+          <input type="text" id="username" placeholder="Username" class="form-control" />
         </div>
         <div class="form-inputs">
           <label for="password" class="form-label text-white">Password</label>
           <input type="password" id="inputPassword" placeholder="Password" class="form-control" />
         </div>
-        <button type="submit" class="btn btn-primary btn-lg">Register</button>
-      </div>
+        <button type="submit" id="submit" class="btn btn-primary btn-lg">Register</button>
+      </form>
       <div class="background-image">
         <img src="img/basaltright.svg" alt="basalt" class="float-end" />
         <img src="img/basaltleft.svg" alt="basalt" class="float-start" />
@@ -50,5 +50,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
