--- a/signIn.html
+++ b/signIn.html
@@ -24,7 +24,7 @@
     <main>
       <div class="loginForm">
         <img src="img/basaltwhite.svg" alt="" />
-        <p class="text-white">Login</p>
+        <h3 class="text-white">Login</h3>
         <div class="form-inputs">
           <label for="username" class="form-label text-white">Username</label>
           <input type="text" placeholder="Username" class="form-control" />
@@ -46,5 +46,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="signIn.js"></script>
   </body>
 </html>
