done some javascript edits to main and profile, also added 2 new default pictures

--- a/detailedpost.html
+++ b/detailedpost.html
@@ -56,6 +56,6 @@
       <img src="img/basaltright.svg" alt="basalt" class="float-end" />
       <img src="img/basaltleft.svg" alt="basalt" class="float-start" />
     </div>
-    <script type="module" src="detailedpost.js"></script>
+    <script type="module" src="js/detailedpost.js"></script>
 </body>
 </html>
