--- a/main.html
+++ b/main.html
@@ -17,10 +17,6 @@
     <nav class="navbar">
       <a href="#"><img src="img/BASALTbasalt.svg" alt="" /></a>
       <input type="text" id="searchBar" placeholder="Search for posts..." />
-      <a href="#" class="nav-link">
-        Gabriel Zouad
-        <img class="bi pe-none me-2 rounded-circle" width="48" height="48" src="img/bildeavmeg.jfif" />
-      </a>
     </nav>
   </header>
   <body>
@@ -101,6 +97,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
