--- a/profile.html
+++ b/profile.html
@@ -17,26 +17,13 @@
     <header>
       <nav class="navbar">
         <a href="#"><img src="img/BASALTbasalt.svg" alt="" /></a>
-        <a href="#" class="nav-link" aria-current="page">
-          <img class="bi pe-none me-2 rounded-circle" width="48" height="48" src="img/bildeavmeg.jfif" />
-          Gabriel Zouad
-        </a>
       </nav>
     </header>
 
     <main>
-      <div class="card text-bg-dark w-75 mx-auto">
-        <img src="img/banner.jpg" class="card-img" style="height: 300px" alt="..." />
-        <div class="card-img-overlay d-flex align-items-end">
-          <img class="bi pe-none me-2 rounded-circle p-2" width="128" height="128" src="img/bildeavmeg.jfif" />
-          <div class="mb-4">
-            <h5 class="card-title">Gabriel Zouad</h5>
-            <p class="card-text">Big man thing.</p>
-          </div>
-        </div>
-      </div>
+      <div class="userInformation"></div>
 
-      <div class="container pt-4">
+      <div class="container pt-4 mx-auto">
         <div class="row">
           <div class="col-8">
             <h3>Innlegg</h3>
@@ -64,16 +51,6 @@
               <img src="img/nikkerudmen.jpg" class="card-img-bottom p-3 rounded-5" alt="..." />
             </div>
           </div>
-          <div class="col-4">
-            <div class="d-flex align-center">
-              <img src="img/profileicon.png" width="32" height="32" alt="" />
-              <h3>Biografi</h3>
-            </div>
-            <div class="card p-2">
-              <h5 class="text-white">Lever livet som jeg gjør</h5>
-              <h5 class="text-white">ikke gi brukte barn nye gaver</h5>
-            </div>
-          </div>
         </div>
       </div>
     </main>
@@ -83,5 +60,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+
+    <script src="js/profile.js" type="module"></script>
   </body>
 </html>
