--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
