--- a/signIn.html
+++ b/signIn.html
@@ -46,6 +46,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="signIn.js"></script>
+    <script type="module" src="js/signIn.js"></script>
   </body>
 </html>
