--- a/main.html
+++ b/main.html
@@ -17,6 +17,10 @@
     <nav class="navbar">
       <a href="#"><img src="img/BASALTbasalt.svg" alt="" /></a>
       <input type="text" id="searchBar" placeholder="Search for posts..." />
+      <a href="#" class="nav-link">
+        Gabriel Zouad
+        <img class="bi pe-none me-2 rounded-circle" width="48" height="48" src="img/bildeavmeg.jfif" />
+      </a>
     </nav>
   </header>
   <body>
@@ -53,7 +57,7 @@
 
     <main class="mx-auto">
       <div>
-        <form onsubmit="handleSubmit()">
+        <form>
           <input type="text" id="title" name="title" />
           <input type="text" id="bodyText" name="body" />
           <input type="text" id="bildeURL" name="media" />
