--- a/signIn.html
+++ b/signIn.html
@@ -29,12 +29,12 @@
           <label for="username" class="form-label text-white">Username</label>
           <input type="text" placeholder="Username" class="form-control" />
         </div>
-        <div class="form-inputs">
+        <form class="form-inputs">
           <label for="password" class="form-label text-white">Password</label>
           <input type="password" id="inputPassword" placeholder="Password" class="form-control" />
         </div>
-        <button type="submit" class="btn btn-primary btn-lg"><a href="main.html">login</a></button>
-      </div>
+        <button id="submit" type="submit" class="btn btn-primary btn-lg"><a href="main.html">login</a></button>
+      </form>
       <div class="background-image">
         <img src="img/basaltright.svg" alt="basalt" class="float-end" />
         <img src="img/basaltleft.svg" alt="basalt" class="float-start" />
