--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <label for="password" class="form-label text-white">Password</label>
           <input type="password" id="inputPassword" placeholder="Password" class="form-control" />
         </div>
-        <button type="submit" id="submit" class="btn btn-primary btn-lg">Register</button>
+        <button type="submit" id="submit" class="btn btn-primary btn-lg"><a href="signIn.html">Register</a></button>
       </form>
       <div class="background-image">
         <img src="img/basaltright.svg" alt="basalt" class="float-end" />
