--- a/profile.html
+++ b/profile.html
@@ -16,43 +16,14 @@
   <body>
     <header>
       <nav class="navbar">
-        <a href="#"><img src="img/BASALTbasalt.svg" alt="" /></a>
+        <a href="main.html"><img src="img/BASALTbasalt.svg" alt="" /></a>
       </nav>
     </header>
 
     <main>
       <div class="userInformation"></div>
 
-      <div class="container pt-4 mx-auto">
-        <div class="row">
-          <div class="col-8">
-            <h3>Innlegg</h3>
-            <div class="card mb-5 text-white">
-              <div class="card-body">
-                <h5 class="card-title">Gabriel Zouad</h5>
-                <p class="card-text">Nikkerud lærer har blitt lærer på Slus!</p>
-              </div>
-              <img src="img/nikkerudmen.jpg" class="card-img-bottom p-3 rounded-5" alt="..." />
-            </div>
-
-            <div class="card mb-5 text-white">
-              <div class="card-body">
-                <h5 class="card-title">Gabriel Zouad</h5>
-                <p class="card-text">Nikkerud lærer har blitt lærer på Slus!</p>
-              </div>
-              <img src="img/nikkerudmen.jpg" class="card-img-bottom p-3 rounded-5" alt="..." />
-            </div>
-
-            <div class="card mb-5 text-white">
-              <div class="card-body">
-                <h5 class="card-title">Gabriel Zouad</h5>
-                <p class="card-text">Nikkerud lærer har blitt lærer på Slus!</p>
-              </div>
-              <img src="img/nikkerudmen.jpg" class="card-img-bottom p-3 rounded-5" alt="..." />
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="userPosts" class="container pt-4 mx-auto"></div>
     </main>
 
     <script
