--- a/signIn.html
+++ b/signIn.html
@@ -25,15 +25,12 @@
       <div class="loginForm">
         <img src="img/basaltwhite.svg" alt="" />
         <h3 class="text-white">Login</h3>
-        <div class="form-inputs">
-          <label for="username" class="form-label text-white">Username</label>
-          <input type="text" placeholder="Username" class="form-control" />
-        </div>
         <form class="form-inputs">
+          <label for="username" class="form-label text-white">Username</label>
+          <input type="text" id="email" placeholder="Username" class="form-control" />
           <label for="password" class="form-label text-white">Password</label>
           <input type="password" id="inputPassword" placeholder="Password" class="form-control" />
-        </div>
-        <button id="submit" type="submit" class="btn btn-primary btn-lg"><a href="main.html">login</a></button>
+          <button id="submit" type="submit" class="btn btn-primary btn-lg">login</button>
       </form>
       <div class="background-image">
         <img src="img/basaltright.svg" alt="basalt" class="float-end" />
